maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for(x <- 0 to Largeur-1;y <- 0 to Hauteur-1) {
        ^ShortestPathMaze:26: error: not found: value disatnce
  distance = disatnce + 1
             ^ShortestPathMaze:94: error: type mismatch;
 found   : (Int, Int)
 required: Int
  marquerSol(xSortie,ySortie)
             ^ShortestPathMaze:94: error: type mismatch;
 found   : (Int, Int)
 required: Int
  marquerSol(xSortie,ySortie)
                     ^